--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,58 +7,72 @@ body {
     border: 0;
     margin: 0;
     min-width: 570px;
-    background-color: black;
+    background-color: #272727;
+    scroll-behavior: smooth;
+    color: #bdbdbd;
 }
-
+a {
+    text-decoration: none;
+    color: #bdbdbd;
+}
 .header {
     position: relative;
     width: 100%;
     height: 200px;
 }
-
     .header-text {
         position: absolute;
         color: rgba(255, 255, 255, 0.57);
         margin: 0;
         word-break: break-word;
-        line-height: 100%;
-        font-size: 100px;
-        letter-spacing: 1px;
-        /*min-width: 570px;*/
     }
-
     .header-img {
         padding: 0;
         width: 100%;
         height: 100%;
         /*min-width: 570px;*/
     }
-
 li, p {
+    display: inline-block;
     font-family: Calibri, sans-serif;
     letter-spacing: 1px;
 }
-
-.menu-title {
-    font-size: 25px;
-    color: rgba(255, 255, 255, 0.37);
-    text-shadow: 0 0 15px #00f3ff;
-    margin-left: 17px;
+.menu{
+    text-align: center;
+    margin: 15px 10px 15px;
+    padding: 0;
 }
-.menu-item {
-    cursor: pointer;
-    user-select: none;
-    margin-right: 10px;
-    color: rgba(255, 255, 255, 0.37);
-    font-style: italic;
-    font-weight: bold;
-    text-shadow: 0 0 17px #000000;
+    .menu-item {
+        cursor: pointer;
+        user-select: none;
+        margin-right: 10px;
+        color: rgba(255, 255, 255, 0.37);
+        font-style: italic;
+        font-weight: bold;
+        text-shadow: 0 0 17px #000000;
+    }
+    .menu-item:hover {
+        color: rgba(255, 137, 0, 0.6);
+        text-shadow: 0 0 10px #00f3ff;
+    }
+    .menu-item-selected {
+        color: rgba(0, 243, 255, 0.6) !important;
+        text-shadow: 0 0 10px #ff8900 !important;
+    }
+.big_text {
+    width: 80%;
+    text-align: left;
+    margin: 0 auto;
 }
-.menu-item:hover {
-    color: rgba(255, 137, 0, 0.6);
-    text-shadow: 0 0 10px #00f3ff;
-}
-.menu-item-selected {
-    color: rgba(0, 243, 255, 0.6) !important;
-    text-shadow: 0 0 10px #ff8900 !important;
+#to_top{
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    background: #000;
+    color: aqua;
+    border-radius: 50%;
+    width: 85px;
+    height: 85px;
+    line-height: 85px;
+    text-align: center;
 }
