--- a/public/css/index.css
+++ b/public/css/index.css
@@ -7,7 +7,7 @@ body {
     border: 0;
     margin: 0;
     min-width: 570px;
-    background-color: #C3D4C5;
+    background-color: #d0d0d0;
     scroll-behavior: smooth; /* todo не работает */
     color: #244B5B;
 }
@@ -23,10 +23,10 @@ a {
     justify-content: left;
     display: flex;
     height: 200px;
-    background-image: url(../img/pattern-hexes-of-cubes_1_1.svg);
+    background-image: url(../img/pattern-hexes-of-cubes-grey.svg);
 }
     .header-text {
-        background-color: #C3D4C5;
+        background-color: #d0d0d0;
         border-bottom-right-radius: 50%;
         border-top-right-radius: 50%;
         padding-left: 20px;
@@ -61,8 +61,9 @@ li, p {
     }
     .menu-item:hover,
     .menu-item a:hover {
-        color: #C3D4C5;
+        color: #d0d0d0;
         text-shadow: 0 0 10px #244B5B;
+        transition: color .2s;
     }
     .menu-item-selected {
         text-shadow: 0 0 5px #244B5B !important;
@@ -88,6 +89,7 @@ li, p {
     width: 90px;
     height: 90px;
     transition: color .2s;
+    border: 3px solid #244B5B;
 }
     #to_top p {
         position: absolute;
@@ -109,9 +111,10 @@ li, p {
         transform: rotateZ(-45deg);
     }
     #to_top p:hover {
-        color: #C3D4C5;
+        color: #d0d0d0;
+        transition: color .2s;
     }
     #to_top:active {
-        color: #C3D4C5;
         transition: color .4s;
+        box-shadow: inset 0 0 20px 16px #d0d0d0;
     }
